feat: add standard release support!

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "Justin Brooks <jsbroks@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "release": "standard-version"
+  },
+  "devDependencies": {
+    "standard-version": "^9.0.0"
   }
 }
